job title fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -60,7 +60,8 @@
                 }
     
                 .job {
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #545478;
                 }
             }
     
@@ -163,7 +164,8 @@
             }
 
             .job {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #545478;
             }
 
 
